--- a/.classpath
+++ b/.classpath
@@ -2,20 +2,29 @@
 <classpath>
 	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/selenium-java-3.141.59/libs/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/selenium-java-3.141.59/libs/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/selenium-java-3.141.59/libs/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/selenium-java-3.141.59/libs/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/selenium-java-3.141.59/libs/okio-1.14.0.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/byte-buddy-1.7.9.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/guava-23.6-jre.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/okhttp-3.9.1.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/libs/okio-1.13.0.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/client-combined-3.9.1.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/Seleinium java/client-combined-3.9.1-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/commons-io-2.6/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/commons-io-2.6/commons-io-2.6-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/commons-io-2.6/commons-io-2.6-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/commons-io-2.6/commons-io-2.6-tests.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Selenium Req/commons-io-2.6/commons-io-2.6-test-sources.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Selemium/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-tests.jar"/>
-	<classpathentry kind="lib" path="C:/Selemium/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6-test-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
